added setup for regular expressions

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,8 @@
 	<form id="input-form" name="entry-form" action="" method="get">
 	<input id="submit-field" type="text" name="inputbox" value="">
 	<input id="result" type="button" name="submit-button" value="Umwandeln" onClick="resultInput(this.form)">
-</form>
+	</form>
+	<div id="result-area" class="text-section"></div>
 
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
